--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://achtergronf.PNG")
+dock_filesystem_selected_paths=PackedStringArray("res://platformen/platform.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://platformen/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn")
-current_scene="res://node_2d.tscn"
+open_scenes=PackedStringArray("res://node_2d.tscn", "res://platformen/platform2.tscn", "res://platformen/platform.tscn", "res://characters.tscn")
+current_scene="res://characters.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
