--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://platformen/platform.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://normaal1.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://platformen/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,33 +28,33 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://huh.tscn")
-current_scene=""
-center_split_offset=-462
+open_scenes=PackedStringArray("res://node_2d.tscn", "res://platformen/platform2.tscn", "res://platformen/platform.tscn", "res://huh.tscn", "res://backgroundlevel.tscn", "res://walking.tscn")
+current_scene="res://walking.tscn"
+center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [EditorWindow]
 
-screen=1
-mode="fullscreen"
-position=Vector2i(0, 0)
+screen=0
+mode="maximized"
+position=Vector2i(0, 50)
 size=Vector2i(3840, 2160)
 
 [ScriptEditor]
 
 open_scripts=["res://character_body_2d.gd"]
 selected_script="res://character_body_2d.gd"
-open_help=["CharacterBody2D"]
-script_split_offset=100
+open_help=[]
+script_split_offset=400
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1508, 850, 1399, 392)
-floating_window_screen=1
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
 
 [ShaderEditor]
 
