--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,33 +28,33 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://node_2d.tscn", "res://platformen/platform2.tscn", "res://platformen/platform.tscn", "res://huh.tscn", "res://backgroundlevel.tscn", "res://walking.tscn")
-current_scene="res://walking.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://huh.tscn")
+current_scene="res://huh.tscn"
+center_split_offset=-257
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
-mode="maximized"
-position=Vector2i(0, 50)
-size=Vector2i(3840, 2160)
+screen=1
+mode="windowed"
+position=Vector2i(1932, 38)
+size=Vector2i(1896, 1030)
 
 [ScriptEditor]
 
 open_scripts=["res://character_body_2d.gd"]
 selected_script="res://character_body_2d.gd"
-open_help=[]
-script_split_offset=400
+open_help=["CharacterBody2D"]
+script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(2887, 38, 941, 1030)
+floating_window_screen=1
 
 [ShaderEditor]
 
