--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -2,16 +2,16 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://normaal1.png")
+dock_filesystem_selected_paths=PackedStringArray("res://huh.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://platformen/")
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -32,8 +32,8 @@ open_scenes=PackedStringArray("res://huh.tscn")
 current_scene="res://huh.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ size=Vector2i(1896, 1030)
 
 [ScriptEditor]
 
-open_scripts=["res://character_body_2d.gd"]
+open_scripts=["res://character_body_2d.gd", "res://deur.gd", "res://gem_1.gd", "res://gem_2.gd"]
 selected_script="res://character_body_2d.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=100
@@ -53,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(2887, 38, 941, 1030)
+floating_window_rect=Rect2i(1932, 38, 1896, 1030)
 floating_window_screen=1
 
 [ShaderEditor]
