--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d2.tscn")
-current_scene="res://node_2d2.tscn"
+current_scene="res://huh.tscn"
 center_split_offset=-462
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -37,15 +37,15 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
-mode="fullscreen"
-position=Vector2i(0, 0)
-size=Vector2i(1896, 1030)
+screen=0
+mode="windowed"
+position=Vector2i(7, 40)
+size=Vector2i(1905, 1032)
 
 [ScriptEditor]
 
 open_scripts=["res://canvas_layer.gd", "res://character_body_2d. 2.gd", "res://character_body_2d.gd", "res://deur.gd", "res://game_over_menu.gd", "res://gem_1.gd", "res://gem_2.gd"]
-selected_script="res://character_body_2d. 2.gd"
+selected_script="res://deur.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=100
 list_split_offset=0
