--- a/main game/.godot/editor/script_editor_cache.cfg
+++ b/main game/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 42,
+"row": 27,
+"scroll_position": 8.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 3.0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 8,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 7,
-"selection_to_column": 14,
-"selection_to_line": 10,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -81,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 18.0,
+"row": 23,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
