alle levels werken

--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -4,18 +4,14 @@ dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=2
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< Updated upstream
-dock_filesystem_selected_paths=PackedStringArray("res://Image (1).png")
+<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://Image (1).png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://node_2d3.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://platformen/")
->>>>>>> Stashed changes
+dock_filesystem_selected_paths=PackedStringArray("res://node_2d2.tscn")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -25,7 +21,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -33,50 +29,37 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d2.tscn", "res://node_2d3.tscn")
-current_scene="res://node_2d3.tscn"
-center_split_offset=-462
-<<<<<<< Updated upstream
+open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d3.tscn", "res://node_2d2.tscn")
+current_scene="res://node_2d2.tscn"
+center_split_offset=0
 selected_default_debugger_tab_idx=0
-=======
-selected_default_debugger_tab_idx=1
->>>>>>> Stashed changes
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="fullscreen"
-position=Vector2i(0, 0)
+mode="windowed"
 size=Vector2i(1905, 1032)
+position=Vector2i(7, 40)
 
 [ScriptEditor]
 
-<<<<<<< Updated upstream
-open_scripts=["res://canvas_layer.gd", "res://character_body_2d. 2.gd", "res://character_body_2d.gd", "res://deur.gd", "res://game_over_menu.gd", "res://gem_1.gd", "res://gem_2.gd"]
-selected_script="res://character_body_2d.gd"
-=======
-open_scripts=["res://canvas_layer.gd", "res://character_body_2d. 2.gd", "res://character_body_2d.gd", "res://deur2.gd", "res://deur3.gd", "res://deur.gd", "res://game_over_menu.gd", "res://gem_1.gd", "res://gem_2.gd"]
-selected_script="res://deur3.gd"
->>>>>>> Stashed changes
-open_help=["CharacterBody2D"]
-script_split_offset=100
+open_scripts=["res://character_body_2d. 2.gd", "res://deur.gd", "res://game_over_menu.gd"]
+selected_script="res://game_over_menu.gd"
+open_help=[]
+script_split_offset=200
 list_split_offset=0
-zoom_factor=0.7142856
+zoom_factor=1.0
 
 [GameView]
 
-<<<<<<< Updated upstream
-floating_window_rect=Rect2i(0, 0, 2880, 1800)
-=======
 floating_window_rect=Rect2i(966, 40, 946, 1032)
->>>>>>> Stashed changes
 floating_window_screen=0
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=400
+split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
