--- a/main game/.godot/editor/script_editor_cache.cfg
+++ b/main game/.godot/editor/script_editor_cache.cfg
@@ -17,60 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-<<<<<<< Updated upstream
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-=======
 "column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 1,
->>>>>>> Stashed changes
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://canvas_layer.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://gem_1.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://gem_2.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"h_scroll_position": 237,
+"row": 0,
+"scroll_position": 15.999999999999998,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -80,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 0.0,
-"selection": false,
+"row": 22,
+"scroll_position": 14.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 22,
+"selection_to_column": 26,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -94,38 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://deur2.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 55,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 22,
-"scroll_position": 4.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://deur3.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 43,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 19,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
