--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Image (1).png")
+dock_filesystem_selected_paths=PackedStringArray("res://Image.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -31,8 +31,8 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d2.tscn")
 current_scene="res://huh.tscn"
 center_split_offset=-462
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
