--- a/main game/.godot/editor/editor_layout.cfg
+++ b/main game/.godot/editor/editor_layout.cfg
@@ -4,12 +4,12 @@ dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=1
 dock_floating={}
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=40
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Image.png")
+dock_filesystem_selected_paths=PackedStringArray("res://huh.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d2.tscn")
-current_scene="res://huh.tscn"
+open_scenes=PackedStringArray("res://huh.tscn", "res://node_2d2.tscn", "res://node_2d3.tscn", "res://node_2d4.tscn")
+current_scene="res://node_2d3.tscn"
 center_split_offset=-462
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
-mode="fullscreen"
-position=Vector2i(0, 0)
-size=Vector2i(1905, 1032)
+screen=1
+mode="windowed"
+position=Vector2i(1926, 37)
+size=Vector2i(1908, 1037)
 
 [ScriptEditor]
 
-open_scripts=["res://canvas_layer.gd", "res://character_body_2d. 2.gd", "res://character_body_2d.gd", "res://deur.gd", "res://game_over_menu.gd", "res://gem_1.gd", "res://gem_2.gd"]
-selected_script="res://character_body_2d.gd"
+open_scripts=["res://canvas_layer.gd", "res://character_body_2d. 2.gd", "res://character_body_2d.gd", "res://deur2.gd", "res://deur3.gd", "res://deur.gd", "res://game_over_menu.gd", "res://gem_1.gd", "res://gem_2.gd", "res://well_done_menu.gd"]
+selected_script="res://deur3.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=100
 list_split_offset=0
@@ -53,8 +53,8 @@ zoom_factor=0.7142856
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 2880, 1800)
-floating_window_screen=0
+floating_window_rect=Rect2i(1926, 37, 1908, 1037)
+floating_window_screen=1
 
 [ShaderEditor]
 
