--- a/main game/.godot/editor/quick_open_dialog_cache.cfg
+++ b/main game/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,4 @@
 [selected_history]
 
 PackedScene=PackedStringArray("res://huh.tscn", "res://backgroundlevel.tscn")
+Texture2D=PackedStringArray("uid://b5x7eqgdimw7g", "uid://diqslqldp5ss2")
