--- a/main game/.godot/scene_groups_cache.cfg
+++ b/main game/.godot/scene_groups_cache.cfg
@@ -1,7 +1,11 @@
+[res://huh.tscn]
+
+groups=[&"player"]
+
 [res://node_2d2.tscn]
 
 groups=[&"player"]
 
-[res://huh.tscn]
+[res://node_2d3.tscn]
 
 groups=[&"player"]
