--- a/Boter, kaas en eieren/boter-kaas-en-eieren/.godot/editor/project_metadata.cfg
+++ b/Boter, kaas en eieren/boter-kaas-en-eieren/.godot/editor/project_metadata.cfg
@@ -1,11 +1,12 @@
 [editor_metadata]
 
-executable_path="C:/Program Files 2/Godot_v4.4.1-stable_win64.exe/Godot_v4.4.1-stable_win64.exe"
+executable_path="/usr/bin/godot"
 
 [dialog_bounds]
 
 create_new_node=Rect2(510, 190, 900, 700)
-project_settings=Rect2(360, 190, 1200, 700)
+project_settings=Rect2(2280, 190, 1200, 700)
+export=Rect2(2430, 290, 900, 500)
 
 [quick_open_dialog]
 
@@ -19,3 +20,12 @@ last_selected_language="GDScript"
 
 scripts=["res://main.gd"]
 scenes=["res://main.tscn"]
+
+[game_view]
+
+select_mode=0
+
+[export_options]
+
+default_filename="boterkaaseieren_web"
+export_debug=true
